fix modal close button "x" color in dark mode

--- a/app/containers/snippet/index.scss
+++ b/app/containers/snippet/index.scss
@@ -345,7 +345,8 @@
     width: 100%;
     min-height: 550px;
     white-space: pre-wrap;
-    border: 0px;
+    border:  0px;
+    background: var(--bg-primary);
   }
 }
 
